--- a/lesson-2-spring-mvc/src/main/webapp/WEB-INF/view/products.html
+++ b/lesson-2-spring-mvc/src/main/webapp/WEB-INF/view/products.html
@@ -14,7 +14,6 @@
 </head>
 
 <body>
-
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <a class="navbar-brand" href="#">EShop</a>
 
@@ -26,7 +25,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-                <a class="nav-link" href="#">Product data</a>
+                <a class="nav-link" href="#">Product List</a>
             </li>
         </ul>
     </div>
@@ -35,18 +34,31 @@
 <div class="container">
     <div class="row py-2">
         <div class="col-12">
-            <form method="post" th:action="@{/products/update}" th:object="${product}">
-                <input th:field="*{id}" th:type="hidden">
-                <div class="form-group">
-                    <label>Title</label>
-                    <input class="form-control" placeholder="Enter title" th:field="*{title}" type="text">
-                </div>
-                <div class="form-group">
-                    <label>Price</label>
-                    <input class="form-control" placeholder="Enter price" th:field="*{cost}" type="number">
-                </div>
-                <button class="btn btn-primary" type="submit">Submit</button>
-            </form>
+            <a class="btn btn-primary" href="products/new">Add Product</a>
+        </div>
+
+        <div class="col-12">
+            <table class="table table-bordered my-2">
+                <thead>
+                <tr>
+                    <th scope="col">Id</th>
+                    <th scope="col">Name</th>
+                    <th scope="col">Price</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr th:each="product: ${products}">
+                    <th th:text="${product.id}">id</th>
+                    <th th:text="${product.title}">title</th>
+                    <th th:text="${product.cost}">price</th>
+                    <td>
+                        <a class="btn btn-success" th:href="@{/products/{id}(id=${product.id})}"><i
+                                class="fas fa-edit"></i></a>
+                        <a class="btn btn-danger" href="#"><i class="far fa-trash-alt"></i></a>
+                    </td>
+                </tr>
+                </tbody>
+            </table>
         </div>
     </div>
 </div>
@@ -59,5 +71,6 @@
         src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
 <script crossorigin="anonymous" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-
 </body>
+
+</html>
