--- a/lesson-2-spring-mvc/src/main/webapp/WEB-INF/view/products.html
+++ b/lesson-2-spring-mvc/src/main/webapp/WEB-INF/view/products.html
@@ -34,7 +34,14 @@
 <div class="container">
     <div class="row py-2">
         <div class="col-12">
-            <a class="btn btn-primary" href="products/new">Add Product</a>
+            <a class="btn btn-primary" th:href="@{/products/new}">Add Product</a>
+        </div>
+
+        <div class="col-12 mt-3">
+            <form>
+                <label for="title">Title</label><input id="title" name="title" th:value="${param.title}" type="text">
+                <button class="btn btn-primary" type="submit">Filter</button>
+            </form>
         </div>
 
         <div class="col-12">
