--- a/lesson-2-spring-mvc/src/main/webapp/WEB-INF/view/products.html
+++ b/lesson-2-spring-mvc/src/main/webapp/WEB-INF/view/products.html
@@ -59,7 +59,7 @@
                 </tr>
                 </thead>
                 <tbody>
-                <tr th:each="product: ${products}">
+                <tr th:each="product: ${productsPage.content}">
                     <th th:text="${product.id}">id</th>
                     <th th:text="${product.title}">title</th>
                     <th th:text="${product.cost}">price</th>
@@ -74,6 +74,27 @@
                 </tr>
                 </tbody>
             </table>
+        </div>
+        <div class="col-12">
+            <nav aria-label="...">
+                <ul class="pagination">
+                    <li class="page-item" th:if="${productsPage.hasPrevious()}">
+                        <a )} class="page-link"
+                           tabindex="-1"
+                           th:href="@{/products(page=${productsPage.number}, size=${productsPage.size}, title=${title}, priceLess=${param.priceLess},priceGreater=${param.priceGreater}, sortBy=${param.sortBy})}">Previous</a>
+                    </li>
+                    <li class="page-item"
+                        th:classappend="${num==productsPage.number + 1} ? active"
+                        th:each="num: ${#numbers.sequence(1, productsPage.totalPages)}">
+                        <a class="page-link"
+                           th:href="@{/products(page=${num}, size=${productsPage.size}, title=${title}, priceLess=${param.priceLess},priceGreater=${param.priceGreater}, sortBy=${param.sortBy})}"
+                           th:text="${num}">1</a></li>
+                    <li class="page-item"><a class="page-link"
+                                             th:href="@{/products(page=${productsPage.number+2}, size=${productsPage.size}, title=${title}, priceLess=${param.priceLess},priceGreater=${param.priceGreater}, sortBy=${param.sortBy})}"
+                                             th:if="${productsPage.hasNext()}">Next</a>
+                    </li>
+                </ul>
+            </nav>
         </div>
     </div>
 </div>
