--- a/lesson-6-spring-boot/src/main/resources/templates/products.html
+++ b/lesson-6-spring-boot/src/main/resources/templates/products.html
@@ -24,8 +24,11 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-                <a class="nav-link" href="#">Product List</a>
+            <li class="nav-item">
+                <a class="nav-link" th:href="@{/products}">Product List</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" th:href="@{/users}">User List</a>
             </li>
         </ul>
     </div>
@@ -56,6 +59,7 @@
                     <th scope="col">Id</th>
                     <th scope="col">Name</th>
                     <th scope="col">Price</th>
+                    <th scope="col">Edit/Remove</th>
                 </tr>
                 </thead>
                 <tbody>
