--- a/lesson-6-spring-boot/src/main/resources/templates/products.html
+++ b/lesson-6-spring-boot/src/main/resources/templates/products.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:sec="http://www.thymeleaf.org/extras/spring-security" xmlns:th="http://www.thymeleaf.org">
 
 <head>
     <!-- Required meta tags -->
@@ -27,10 +27,12 @@
             <li class="nav-item">
                 <a class="nav-link" th:href="@{/products}">Product List</a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link" th:href="@{/users}">User List</a>
-            </li>
         </ul>
+        <form class="form-inline my-2 my-lg-0" method="post" sec:authorize="isAuthenticated()"
+              th:action="@{/logout}">
+            <button class="btn btn-outline-success my-2 my-sm-0">Logout <span
+                    sec:authentication="principal.username"></span></button>
+        </form>
     </div>
 </nav>
 
