--- a/lesson-6-spring-boot/src/main/resources/templates/welcome.html
+++ b/lesson-6-spring-boot/src/main/resources/templates/welcome.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:sec="http://www.thymeleaf.org/extras/spring-security" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <!-- Required meta tags -->
@@ -26,10 +26,10 @@
             <li class="nav-item">
                 <a class="nav-link" th:href="@{/products}">Product List</a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link" th:href="@{/users}">User List</a>
-            </li>
+
         </ul>
+        <a class="btn btn-outline-success my-2 my-sm-0" sec:authorize="!isAuthenticated()"
+           th:href="@{/login}">log In</a>
     </div>
 </nav>
 <div class="container">
